fuser: fix loop over kinfo_proc array

The previous code would skip as many entries at the end of the
array as there were zombies in the list.  While here fix type
of cnt.

Submitted by:	Ali Abdallah <ali.abdallah suse.com>
PR:		232702

(cherry picked from commit dd2b23006caa2323a12749dfc0d831a26a79bc5b)